test/conformance/kuttl/validate/clusterpolicy/standard/audit/configmap-context-lookup/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-labels
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
