test/conformance/kuttl/validate/clusterpolicy/standard/audit/configmap-context-lookup/03-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  labels:
    app.kubernetes.io/managed-by: kyverno
  namespace: test-cm-lookup
results:
- policy: validate-labels
  resources:
  - apiVersion: v1
    kind: Pod
    name: test-cm-lookup-pod
    namespace: test-cm-lookup
  result: pass
  rule: validate-labels
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
